apps/vikunja/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "vikunja"
spec:
  ports:
    - port: 80
      targetPort: "vikunja"
  selector:
    app.kubernetes.io/name: "vikunja"
